--- a/header.css
+++ b/header.css
@@ -1,559 +1,497 @@
-head{
-  margin:0;
-  padding:0;
-  box-sizing: border-box;
-}
 body {
+  overflow-x: hidden;
+  font-family: "Arial", sans-serif;
+  color: #324950;
+  padding: 0;
   margin: 0;
-  background-color: #F7F7F7;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #fefbfb;
 }
-.main{
-position: relative;
+.container {
+  width: 100%;
+  padding: 0 0;
+  max-width: 1100em;
+  margin: 0 0;
 }
-.header{
-  background-image: url('bg.svg');
-  height: 100vh;
-  background-size: 100% auto;
+.header {
+  width: 100%;
+  max-width: 1100em;
+  height: 850px;
+  padding-top: 20px 405px;
+  padding: 20px;
+  background: #ffffff;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+  background-image: url("./img/bg.png");
   background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
-.logo{
-  margin-top: 20px;
+.burger-menu {
+  display: none;
+}
+.header-all {
+  width: 100%;
+  height: 122px;
+  padding-top: 20px 405px;
+  padding: 20px;
+  background: #ffffff;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
+}
+.head {
+  display: flex;
+  justify-content: space-around;
+}
+.logotip {
+  width: 166px;
+  height: 83px;
+  margin-top: 15px;
+}
+.HeadSearch {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 .search {
-  position: relative;
-  display: inline-block;
-  margin: 20px;
-  margin-left: 250px;
-  width: 300px;
-} 
-
-.search span {
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-}
-
-.search span img {
-  display: block;
-  width: 20px;
-  height: 20px;
-}
-
-.header-wrapped{
+  width: 350px;
+  height: 29px;
+  border-bottom: solid 1px black;
+  background: rgba(0, 0, 0, 0);
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content:space-around;
+  justify-content: space-between;
+  margin-left: auto;
 }
-
-.menu{
-  display: flex;
-  flex-direction: column;
-}
-.search input[type="text"] {
-  width: 100%;
-  border: none;
-  border-bottom: 2px solid black;
-  font-size: 16px;
-  padding: 10px 5px;
+.SearchInput {
+  background: transparent;
+  border: 0;
   outline: none;
-  background: none;
+  font-weight: 500;
+  font-size: 16px;
 }
-
-li{
-  display: inline;
-  color: black;
-  
+.SearchIcon {
+  margin: 3px 0;
+  width: 18px;
+  height: 18px;
 }
-ul>a{
+.return-link {
+  display: flex;
+  justify-content: space-between;
+  color: #57984c;
+}
+.Menu {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  width: 499px;
+  height: 25px;
+  font-weight: 500;
+  margin-right: auto;
+}
+.MenuItem {
+  color: #3d5e68;
+}
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: inherit;
+}
+a {
+  color: inherit;
+  cursor: pointer;
   text-decoration: none;
 }
-.navbar>ul{
-  display: flex;    
-  gap: 20px;  
-  font-size: 18px;
-  font-family: 'Arial', sans-serif;
+a:hover {
+  color: #324950;
+  text-decoration: none;
 }
-h1{
-  font-family: 'Arial', serif;
-  font-size: 48px;
-  color: #735440;
-  padding-bottom: 60px;
-}
-.text-head{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 100px;
-}
-.but_read{
-  width: 145px;
-  height: 48px;
-  background: #57984C;
-  border: none;
-  color: white;
-  font-family: 'Arial';
-}
-.scrollbar {
-  margin-top: 70px;
-  background-color: #FFFFFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 110%;
-}
-.selector ul li:hover {
-  color: rgb(53, 53, 163); 
-  transition: color 0.3s ease-in-out;
-}
-.row {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 100px;
-}
-
-.row li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin: 30px 10px;
-  flex: 1 0 160px;
-}
-
-.row li img {
-  max-width: 100%;
-  max-height: 60px;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.row li br {
-  display: none; 
-}
-
-.row a {
-  font-family: 'Arial', serif;
-}
-
-.content{
-  background-image: url('Union.svg');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-}
-h2{
-  font-size: 30px;
-  font-family: 'Arial', serif;
-  margin-bottom: 30px;
-  position: relative;
-}
-.bloc{
-  padding-top: 30px;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-}
-.bloc:last-child{
-  padding-top: 0;
-}
-h2::after{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  color: #57984C;
-  content: "x x x x x x";
-  font-size: 18px;
-  margin-top: 20px;
-  font-family: 'Arial';
-}
-p{
-  font-size: 18px;
-  font-family: 'Arial', serif;
-  font-weight: 400;
-  padding-top: 30px;
-}
-.bloc>img{
-  width: 450px;
-  height: 450px;
-}
-.text_bloc{
-  margin-top: 80px;
-}
-.text_bloc>p{
-  width: 450px;
-  align-content: center;
-}
-.foot{
-  margin-top: 100px;
-}
-h3{
-  text-align: center;
-  font-size: 64px;
-  font-family: 'Arial', serif;
-  color: #3f5258;
-}
-.selector_foot{
-display: flex;
-justify-content: center;
-background-color: #FFFFFF;
-padding-bottom: 50px;
-}
-h3::after {
-  text-align: center;
-  content: "x x x x x x";
-  display: block;
-  font-size: 18px;
-  font-family: 'Arial';
-  color: #418036;
-}
-.image_foot {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 90px;
-}
-.image_foot img {
-  margin: 0 auto; 
-}
-.catton, .tomat, .sunflowers{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-.catton h4{
-font-family: 'Arial', serif;
-margin: 0 auto;
-font-size: 24px;
-color: #418036;
-margin-top: -50px;
-}
-.tomat h4{
-font-family: 'Arial', serif;
-margin: 0 auto;
-font-size: 24px;
-color: #418036;
-}
-.sunflowers h4{
-font-family: 'Arial', serif;
-margin: 0 auto;
-font-size: 24px;
-color: #418036;
-}
-.catton, .tomat, .sunflowers p{
-margin: 0 auto;
-text-align:center; 
-width: 270px;
-}
-hr{
-margin: 30px auto 0 auto;
-}
-footer{
-background-color: #3d4a4e;
-}
-.navbar_foot ul{
-display: flex;    
-gap: 50px; 
-}
-.navbar_foot >ul li{
-display: flex;    
-gap: 20px;  
-font-size: 18px;
-color: #FFFFFF;
-font-family: 'Arial', sans-serif;
-}
-.links{
-display: flex;
-justify-content: space-evenly;
-align-items: center;
-}
-.social .ros{
-gap:30px;
-}
-.foter{
-background-color: #323d41;
-height: 51px;
-}
-.foter p{
-font-size: 14px;
-color: #FFFFFF;
-font-family: 'Arial';
-text-align: center;
-padding-top: 18px;
-width: 400;
-}
-.headepr{
-  height: 100vh;
-  background-size: 100% auto;
-  align-items: center;
-}
-.blok{
-  padding-top: 30px;
-  display: flex;
-  justify-content:space-around;
-  gap: 10px;
-  text-align: center;
-  background-color: #ffecec;
-}
-.text_blok{
-  margin-top: 0px;
-}
-.text_block>p{
-  padding-top: 30px;
-  display: flex;
-  justify-content:space-around;
-  gap: 10px;
-  text-align: center;
-}
-h5{
-  font-size: 30px;
-  font-family: 'Arial', serif;
-  margin-bottom: 15px;
-  position: relative;
-  text-align: center;
-}
-h5::after{
-  text-align: center;
-  content: "x x x x x x";
-  display: block;
-  font-size: 14px;
-  font-family: 'Arial';
-  color: #418036;
-}
-.pall{
-  padding-top: 10px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
-.pal{
-  background-color: #ffecec;
-  text-align: center;
-}
-.palpl{
-  padding-top: 10px;
-  margin-left: 150px;
-  display: flex;
-  justify-content: left;
-  gap: 20px;
-}
-.papl{
-  background-color: #ffecec;
-  text-align: center;
-}
-.fot{
-  background-color: #ffecec;
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-.text_fott{
-  background-color: #ffecec;
-  margin-top: -40px;
-  text-align:center; 
-}
-.toma1,.toma2,.toma3,.toma4,.toma5,.toma6,.toma7 p{
-  font-family: 'Arial', serif;
-  margin: 0 auto;
-  font-size: 24px;
-  color: #418036;
-  max-width: 400px;
-  max-height: 400px;
-}
-.text_fot{
-  background-color: #FFFFFF;
-  margin-top: -40px;
-  text-align:center; 
-}
-.tm1 p{
-  font-family: 'Arial', serif;
-  margin: 0 auto;
-  font-size: 14px;
-  color: #4f524f;
-  background-color: #FFFFFF;
-}
-.tm2 p{
-  font-family: 'Arial', serif;
-  margin: 0 auto;
-  font-size: 14px; 
-  color: #4f524f;
-}
-.tm3 p{
-  font-family: 'Arial', serif;
-  margin: 0 auto;
-  font-size: 14px;
-  color: #4f524f;
-}
-.catton, .tomat, .sunflowers p{
-  margin: 0 auto;
-  text-align:center; 
-  width: 270px;
-}
-.cont{
-  background-color: #ffecec;
-  width: 1300px;
-  margin: 0 auto;
-}
-.fix{
-margin-top: 450px;
-}
-.paal{
-  text-align: left;
+.headButton {
+  background-color: #108f3a;
   font-size: 16px;
-  font-family: 'Arial', serif;
-  margin-bottom: 200px;
-  position: absolute;
-  color: #418036;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  color: #fff;
 }
-h7{
-  font-size: 30px;
-  font-family: 'Arial', serif;
-  margin-bottom: 30px;
-  position: relative;
-}
-h7::after{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  color: #57984C;
-  font-size: 18px;
-  margin-top: 20px;
-  font-family: 'Arial';
-}
-h8{
-  font-size: 30px;
-  font-family: 'Arial', serif;
-  margin-bottom: 30px;
-  position: relative;
-  color: #418036;
-}
-h8::after{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  color: #57984C;
-  content: "x x x x x x";
+.headcontant {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 229px;
   text-align: center;
-  font-size: 18px;
-  margin-top: -115px;
-  font-family: 'Arial'; 
+  gap: 76px;
 }
-.blocc{
-  padding-top: 60px;
+.headtext {
+  font-size: 50px;
+  color: #554321;
+  top: 35%;
+  left: 29%;
+  font-weight: 500;
+}
+.middle-page {
   display: flex;
+  flex-direction: column;
+  background-color: #e5e5e5;
+  background-image: url("./img/Union-tomato.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  margin: 0 auto;
   justify-content: center;
-  gap: 20px;
-  color: red;
+  align-items: center;
 }
-.text_blooc{
-  padding-top: 60px;
+.middle-page > p {
+  color: #57984c;
+}
+.middle {
+  margin: 0;
+  max-width: 1100em;
+}
+.middle-all {
+  background-color: #e4dede;
+}
+.MiddleList {
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  color: black;
+  justify-content: space-between;
+  list-style-type: none;
+  align-items: center;
+  padding: 20px 175px;
 }
-.blocc>img{
-  width: 310px;
+.MiddleItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.MiddleIco {
+  margin-bottom: 20px;
+}
+.content-first {
+  padding: 71px 0 100px 0;
+  text-align: left;
+  /* padding: 20px 175px; */
+  overflow: hidden;
+  background-color: #f8f8f8;
+}
+#block-first {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+#first-img {
+  width: 33.75em;
+  height: 31.125em;
+}
+#block-first-first p {
+  width: 495px;
+}
+#block-second-first {
+  width: 495px;
+}
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+.bg-content {
+  background-image: url(./img/Union.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+}
+.content-second {
+  background-color: #ededed;
+  text-align: center;
+  padding-top: 70px;
+}
+#block-second {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+#img-content-second {
+  align-items: center;
+  display: flex;
+}
+#content-second-block {
+  padding-bottom: 91px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+#content-second-block figure {
+  text-align: center;
+}
+#content-second-block figcaption {
+  color: green;
+  font-weight: 600;
+}
+#figure-1,
+#figure-2,
+#figure-3 {
+  color: #324950;
+  width: 243px;
+  margin: 0 auto;
+}
+#footer_first {
+  padding: 27px 0 10px 0;
+  background-color: #2d3f45;
+  display: flex;
+  justify-content: space-around;
+}
+#footer_first ul {
+  text-transform: uppercase;
+  cursor: pointer;
+  list-style: none;
+  color: #fff;
+  gap: 30px;
+  display: flex;
+  flex-direction: row;
+}
+#footer_first a {
+  color: #fff;
+}
+.footer_first div {
+  align-items: center;
+  display: flex;
+}
+.footer_first div img {
+  width: 30px;
+  height: 30px;
+}
+#footer_second {
+  padding: 18px 0 13px 0;
+  background-color: #50676e;
+  text-align: center;
+  color: #fff;
+}
+#footer_second p {
+  margin: 0;
+}
+.textBlock {
+  display: flex;
+  flex-direction: column;
+  padding: 50px 200px;
+}
+.textBlock h4 {
+  color: #324950;
+  font-size: 44px;
+  font-weight: 700;
+}
+.blockInText {
+  padding: 0 26px;
+  border-left: 4px solid #eb5757;
+  border-radius: 3px;
+  margin-bottom: 33px;
+}
+.sortTomato {
+  gap: 30px;
+  padding: 0 22px;
+  align-items: center;
+  height: 449.5px;
+  display: flex;
+  justify-content: space-around;
+  background: #fff;
+}
+.blockInText-second {
+  padding: 0 26px;
+  border-left: 4px solid #eb5757;
+  border-radius: 3px;
+  margin: 47px 0;
+}
+.tomatos-block {
+  flex-wrap: wrap;
+  display: flex;
+  gap: 30px;
+  column-gap: 30px;
+  align-items: center;
+}
+#tomato {
+  margin-bottom: 0;
+  color: #57984c;
+  text-align: center;
+  background-color: #fff;
+}
+.tomatos-block figure {
+  overflow-y: hidden;
+  width: 350px;
   height: 310px;
 }
-.text_blloc{
-  margin-top: -100px;
-  text-align: center;
+.tomatos-block p {
+  margin-bottom: 0;
 }
-.text_blloc>p{
-  width: 450px;
-  align-content: center;
-}
-.text_foott{
-  margin-top: -40px;
-  position: absolute;
-  border: none; 
-}
-.spisok>ul{
-  display: flex;    
-  gap: 20px;  
-  font-size: 18px;
-  font-family: 'Arial', sans-serif;
-}
-h9{
-  font-size: 20px;
-  font-family: 'Arial', serif;
-  margin-bottom: 100px;
-  position: relative;
-  color: #418036;
-}
-h9::after{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  color: #57984C;
-  font-size: 18px;
-  margin-top: 100px;
-  font-family: 'Arial'; 
-}
-.text .had{
-  font-size: 20px;
-  font-weight: bold;
-  text-align: left;
-  color: #57984c;
-  margin-top: 30px;
-}
-.text hr{
-  width: 183px;
-  background-color: #57984c;
-  margin-bottom: 24px;
-  height: 2px;
-}
-.fot .two{
-  position: absolute;
-  right:0;
-}
-.li_sp{
-  display: list-item;
-}
-h10{
-  font-size: 30px;
-  font-family: 'Arial', serif;
-  margin-bottom: -30px;
-  position: relative;
-  text-align: left;
-}
-h10::after{
-  text-align: left;
-  content: "x x x x x x";
-  display: block;
-  font-size: 14px;
-  font-family: 'Arial';
-  color: #418036;
-}
-.contact{
+.middle-text {
+  display: flex;
+  flex-direction: row;
+  gap: 44px;
+
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 60% 40%;
 }
-h11{
+.red-text {
+  color: #cf2333;
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: 30px;
+  font-weight: 700;
+}
+.characteristics {
+  padding-bottom: 12px;
+  color: #57984c;
+  border-bottom: #57984c 1px solid;
+  width: 200px;
+  padding-top: 30px;
   font-size: 20px;
-  font-family: 'Arial', serif;
-  margin-bottom: 120px;
+}
+.download-block {
+  text-align: right;
+  margin: 30px 0;
+}
+.download-block button {
+  color: #57984c;
+  border: 2px solid #57984c;
+  border-radius: 60px;
+  cursor: pointer;
+  padding: 11px;
+  align-items: center;
+  width: 225px;
+  height: 55px;
+}
+.contant-contact {
+  max-width: 69.375em;
+  margin: 0 auto;
+  padding-top: 51px;
   position: relative;
-  color: #418036;
+  height: fit-content;
 }
-h11::after{
-  position: absolute;
-  top: 100%;
-  left: 0;
-  color: #57984C;
-  font-size: 18px;
-  margin-top: 100px;
-  font-family: 'Arial'; 
+.content-anketa {
+  display: flex;
+  width: 100%;
+  height: 763px;
 }
-.cn_t{
-text-align: center;
-background-color: #FFFFFF;
+.right-content {
+  margin-left: 125px;
+}
+.left-content input {
+  box-sizing: border-box;
+  margin-top: 10.5px;
+  margin-bottom: 20px;
+  border: 1px solid #dadada;
+  border-radius: 10px;
+  width: 350px;
+  height: 45px;
+}
+.right-content select {
+  width: 635px;
+  height: 45px;
+  margin-top: 10.5px;
+  margin-bottom: 20px;
+  background: #ffffff;
+  border: 1px solid #dadada;
+  border-radius: 10px;
+}
+.right-content button {
+  width: 255px;
+  height: 55px;
+  color: white;
+  background: #57984c;
+  border: none;
+  border-radius: 60px;
+}
+.sumbit-kapcha {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.kaptcha {
+  margin-right: 10px;
+}
+.input1,
+.input2 {
+  width: 635px;
+  height: 42px;
+  margin-top: 10.5px;
+  margin-bottom: 20px;
+  background: #ffffff;
+  border: 1px solid #dadada;
+  line-height: 150%;
+}
+
+.input3 {
+  width: 633.9px;
+  height: 342.75px;
+  margin-top: 10.5px;
+  margin-bottom: 20px;
+  background: #ffffff;
+  border: 1px solid #dadada;
+  border-radius: 10px;
+  line-height: 150%;
+  resize: none;
+}
+
+.input4 {
+  width: 225px;
+  height: 45px;
+  margin-top: 10.5px;
+  margin-bottom: 10px;
+  background: #ffffff;
+  border: 1px solid #dadada;
+  border-radius: 10px;
+  line-height: 150%;
+  margin-right: 30px;
+}
+.our-adress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 250px;
+  background-color: #ffffff;
+}
+.green {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 142.7%;
+  color: #57984c;
+}
+.line-adress {
+  border: 1px solid #57984c;
+  width: 183px;
+  height: 0px;
+  margin: 0 auto;
+}
+.our-adress span {
+  color: green;
+}
+.p-ob {
+  font-family: "Arial";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: #324950;
+  margin: 0px;
 }
