--- a/header.css
+++ b/header.css
@@ -23,7 +23,7 @@ body {
   padding: 20px;
   background: #ffffff;
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-  background-image: url("./img/bg.png");
+  background-image: url("bg.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
